--- a/LawyerbackEnd/LawyerbackEnd/LawyerbackEnd.csproj
+++ b/LawyerbackEnd/LawyerbackEnd/LawyerbackEnd.csproj
@@ -27,6 +27,7 @@
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="wwwroot\images\holder\" />
     <Folder Include="wwwroot\images\attorneys\" />
+    <Folder Include="wwwroot\images\Logo\" />
   </ItemGroup>
 
 </Project>
