--- a/LawyerbackEnd/LawyerbackEnd/appsettings.json
+++ b/LawyerbackEnd/LawyerbackEnd/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "LawyerConnection": "Server=DESKTOP-J12R9UI\\SQLEXPRESS;Database=LawyerDb; Trusted_Connection=True; MultipleActiveResultSets=true",
-    "Server": "Data Source=SQL8002.site4now.net;Initial Catalog=db_a88fbc_lawyer;User Id=db_a88fbc_lawyer_admin;Password=emin123!A"
+    //"LawyerConnection": "Server=DESKTOP-J12R9UI\\SQLEXPRESS;Database=LawyerDb; Trusted_Connection=True; MultipleActiveResultSets=true",
+    //"Server": "Data Source=SQL8002.site4now.net;Initial Catalog=db_a88fbc_lawyer;User Id=db_a88fbc_lawyer_admin;Password=emin123!A"
+    "Server": "Data Source=SQL8004.site4now.net;Initial Catalog=db_a8c3ec_nusrat656db;User Id=db_a8c3ec_nusrat656db_admin;Password=Nusrat123"
     //"Lite": "Data Source=C:\\Users\\EMIN\\Desktop\\lawyersWebsite\\LawyerbackEnd\\LawyerbackEnd\\lawyerDb.db;"
 
   },
@@ -14,4 +15,5 @@
   },
   "AllowedHosts": "*"
 }
+
 
